debugging model design with a test example

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -13,13 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import math\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "from torch.utils.data import random_split\n",
+    "from torchtext.data.utils import get_tokenizer\n",
+    "from torchtext.vocab import build_vocab_from_iterator\n",
+    "from torchtext.datasets import AG_NEWS\n",
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
@@ -31,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +69,7 @@
        "        [-0.7568, -0.6536, -0.7568]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(-0.0631, grad_fn=<SumBackward0>)"
+       "tensor(-0.1854, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,28 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.4798, 0.0733, 0.9246, 0.9232, 0.8420, 0.7289],\n",
-      "         [0.5115, 0.8718, 0.9227, 0.9176, 0.7529, 0.6058],\n",
-      "         [0.4938, 0.9175, 0.9505, 0.0821, 0.8946, 0.8835],\n",
-      "         [0.8759, 0.1793, 0.3222, 0.4535, 0.7326, 0.8833],\n",
-      "         [0.1397, 0.9988, 0.5021, 0.1885, 0.6068, 0.5807]]])\n",
-      "tensor([[[0.5278, 0.7106, 0.0225, 0.1594, 0.6950, 0.1188],\n",
-      "         [0.1737, 0.4454, 0.9145, 0.4098, 0.7631, 0.5530],\n",
-      "         [0.6709, 0.3885, 0.7824, 0.5751, 0.2715, 0.5452],\n",
-      "         [0.0527, 0.0020, 0.6902, 0.0224, 0.4964, 0.2405],\n",
-      "         [0.9476, 0.8544, 0.1650, 0.4228, 0.0887, 0.4015]]])\n",
-      "Final: tensor([[[-0.1810, -0.7537, -0.3358,  0.0108,  1.1739, -0.5905],\n",
-      "         [-1.0066,  0.6114,  1.9423,  0.6375,  1.1202,  0.2058],\n",
-      "         [ 0.2211,  0.5826,  1.6755, -1.0783,  0.2246,  0.8967],\n",
-      "         [-0.3834, -2.2963, -0.1688, -1.5421,  0.3856,  0.1163],\n",
-      "         [ 0.0228,  1.9835, -1.0526, -1.1954, -0.9801, -0.2461]]],\n",
+      "tensor([[[0.6819, 0.9354, 0.6903, 0.0366, 0.6849, 0.6416],\n",
+      "         [0.5199, 0.7700, 0.3092, 0.6851, 0.2818, 0.1478],\n",
+      "         [0.8414, 0.7977, 0.0221, 0.2714, 0.9804, 0.5944],\n",
+      "         [0.2488, 0.8973, 0.8619, 0.7685, 0.4491, 0.0090],\n",
+      "         [0.0423, 0.6825, 0.5328, 0.2912, 0.3406, 0.9102]]])\n",
+      "tensor([[[0.3121, 0.8272, 0.3985, 0.5593, 0.6081, 0.4181],\n",
+      "         [0.8241, 0.3199, 0.9251, 0.5910, 0.0829, 0.9450],\n",
+      "         [0.8792, 0.0930, 0.4043, 0.2949, 0.3686, 0.2105],\n",
+      "         [0.1532, 0.3133, 0.7617, 0.9478, 0.7381, 0.9064],\n",
+      "         [0.5724, 0.9384, 0.8042, 0.1510, 0.0974, 0.8510]]])\n",
+      "Final: tensor([[[-0.1828,  1.5719,  0.0334, -1.0917,  0.4998, -0.0329],\n",
+      "         [ 0.6162,  0.0361,  0.3657,  0.4613, -1.6196,  0.0428],\n",
+      "         [ 1.4760, -0.4186, -1.4787, -1.1593,  0.6277, -0.6146],\n",
+      "         [-1.5344,  0.3117,  1.2544,  1.4660,  0.2582, -0.3624],\n",
+      "         [-1.0488,  1.2484,  0.6002, -1.4427, -1.4521,  1.5687]]],\n",
       "       grad_fn=<NativeLayerNormBackward0>)\n"
      ]
     }
@@ -174,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,24 +282,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.5878, -0.7818,  0.5670,  ...,  0.0621, -1.2793,  0.7879],\n",
-       "         [ 0.5175,  1.8379,  1.3007,  ...,  0.3632, -0.2532,  0.3898]]],\n",
-       "       grad_fn=<NativeLayerNormBackward0>)"
+       "tensor([[[ 2.6925e+00, -2.0137e-03, -7.4248e-01,  ..., -8.8091e-01,\n",
+       "           1.7555e+00, -4.5437e-01],\n",
+       "         [-7.8534e-01,  1.2909e+00,  1.1241e+00,  ..., -3.0774e-03,\n",
+       "          -8.2417e-01,  1.3832e+00]]], grad_fn=<MulBackward0>)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ffn = PositionWiseFFN(d_model, 2048)\n",
+    "ffn = PositionWiseFFN(d_model, 2048, 0.1)\n",
     "x = torch.rand((1, 2, d_model))\n",
     "ffn(x)"
    ]
@@ -308,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,16 +340,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "class EncoderLayer(nn.Module): \n",
     "    def __init__(self, d_k, d_model, d_v, num_heads, d_ff, dropout) -> None:\n",
-    "        super(EncoderLayer).__init__()\n",
+    "        super(EncoderLayer, self).__init__()\n",
     "        self.k_layer, self.q_layer, self.v_layer = nn.Linear(d_k, d_model), nn.Linear(d_k, d_model), nn.Linear(d_v, d_model)\n",
     "        self.multihead_attention = MultiHeadAttention(d_k, d_model, d_v, dropout, num_heads)\n",
-    "        self.pointwise_ffn = PositionWiseFFN(d_model, d_ff)\n",
+    "        self.pointwise_ffn = PositionWiseFFN(d_model, d_ff, dropout)\n",
     "    \n",
     "    def forward(self, x): \n",
     "        k, q, v = self.k_layer(x), self.q_layer(x), self.v_layer(x)\n",
@@ -352,8 +358,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following encoder implementation is based off of the block diagram from Attention Is All You Need"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,6 +385,149 @@
     "        for layer in self.layers:\n",
     "            x = layer(x)\n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preliminary testing on text classification task (encoder only)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_iter = AG_NEWS(split='train')\n",
+    "\n",
+    "# Convert to list to enable random splitting\n",
+    "train_dataset = list(train_iter)\n",
+    "\n",
+    "#80-20 train-val split \n",
+    "train_size = int(len(train_dataset) * 0.8)  \n",
+    "val_size = len(train_dataset) - train_size  \n",
+    "train_data, val_data = random_split(train_dataset, [train_size, val_size])\n",
+    "\n",
+    "tokenizer = get_tokenizer(\"basic_english\")\n",
+    "\n",
+    "def yield_tokens(data_iter):\n",
+    "    for text in data_iter:\n",
+    "        yield tokenizer(text)\n",
+    "\n",
+    "VOCAB_SIZE = 5000\n",
+    "\n",
+    "# Build vocab based on the train_data\n",
+    "train_data_iter = (text for _, text in train_data)\n",
+    "vocab = build_vocab_from_iterator(yield_tokens(train_data_iter), specials=[\"<unk>\"], max_tokens=VOCAB_SIZE)\n",
+    "vocab.set_default_index(vocab[\"<unk>\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "\n",
+    "text_pipeline = lambda x: vocab(tokenizer(x))\n",
+    "label_pipeline = lambda x: int(x) - 1\n",
+    "\n",
+    "def collate_batch(batch):\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    label_list, text_list, lengths = [], [], []\n",
+    "    \n",
+    "    # Sort the batch in the descending order\n",
+    "    batch.sort(key=lambda x: len(x[1]), reverse=True)\n",
+    "    \n",
+    "    for _label, _text in batch:\n",
+    "        label_list.append(label_pipeline(_label))\n",
+    "        processed_text = torch.tensor(text_pipeline(_text), dtype=torch.int64)\n",
+    "        text_list.append(processed_text)\n",
+    "        lengths.append(processed_text.size(0))\n",
+    "        \n",
+    "    label_list = torch.tensor(label_list, dtype=torch.int64)\n",
+    "    lengths = torch.tensor(lengths, dtype=torch.int64)\n",
+    "    \n",
+    "    # Pad sequences\n",
+    "    text_list = pad_sequence(text_list, batch_first=True)\n",
+    "    \n",
+    "    return label_list.to(device), text_list.to(device), lengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = DataLoader(train_data, batch_size = 8, shuffle = True, collate_fn = collate_batch)\n",
+    "val_loader = DataLoader(val_data, batch_size = 8, shuffle = False, collate_fn = collate_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LEARNING_RATE = 1e-3\n",
+    "NUM_EPOCHS = 50\n",
+    "DROPOUT = 0.1\n",
+    "DEVICE = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "D_K = 128\n",
+    "D_V = 128\n",
+    "D_FF = 512\n",
+    "D_MODEL = 256\n",
+    "NUM_LAYERS = 2\n",
+    "OUTPUT_DIM = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Encoder(D_K, D_MODEL, D_V, D_FF, num_heads=4, num_layers=4, vocab_size=VOCAB_SIZE)\n",
+    "model = model.to(DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument index in method wrapper_CUDA__index_select)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[56], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m (y, x, x_size) \u001b[39m=\u001b[39m batch_data\n\u001b[1;32m      5\u001b[0m \u001b[39m#print(\"Labels: {}, data: {}, x_size.cpu(): {}\".format(batch_data[0], x.shape,x_size.cpu()))\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m logits \u001b[39m=\u001b[39m model(x)\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1516\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1518\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_impl(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1522\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1523\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1524\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1525\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1526\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1527\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1529\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1530\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[50], line 11\u001b[0m, in \u001b[0;36mEncoder.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[0;32m---> 11\u001b[0m     embedded \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49membedding(x)\n\u001b[1;32m     12\u001b[0m     x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropout(embedded \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpositional_embedding(x, d_model))\n\u001b[1;32m     13\u001b[0m     \u001b[39mfor\u001b[39;00m layer \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers:\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1516\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1518\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_impl(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1522\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1523\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1524\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1525\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1526\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1527\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1529\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1530\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/sparse.py:162\u001b[0m, in \u001b[0;36mEmbedding.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 162\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49membedding(\n\u001b[1;32m    163\u001b[0m         \u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpadding_idx, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmax_norm,\n\u001b[1;32m    164\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnorm_type, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mscale_grad_by_freq, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msparse)\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/functional.py:2233\u001b[0m, in \u001b[0;36membedding\u001b[0;34m(input, weight, padding_idx, max_norm, norm_type, scale_grad_by_freq, sparse)\u001b[0m\n\u001b[1;32m   2227\u001b[0m     \u001b[39m# Note [embedding_renorm set_grad_enabled]\u001b[39;00m\n\u001b[1;32m   2228\u001b[0m     \u001b[39m# XXX: equivalent to\u001b[39;00m\n\u001b[1;32m   2229\u001b[0m     \u001b[39m# with torch.no_grad():\u001b[39;00m\n\u001b[1;32m   2230\u001b[0m     \u001b[39m#   torch.embedding_renorm_\u001b[39;00m\n\u001b[1;32m   2231\u001b[0m     \u001b[39m# remove once script supports set_grad_enabled\u001b[39;00m\n\u001b[1;32m   2232\u001b[0m     _no_grad_embedding_renorm_(weight, \u001b[39minput\u001b[39m, max_norm, norm_type)\n\u001b[0;32m-> 2233\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49membedding(weight, \u001b[39minput\u001b[39;49m, padding_idx, scale_grad_by_freq, sparse)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument index in method wrapper_CUDA__index_select)"
+     ]
+    }
+   ],
+   "source": [
+    "for i, batch_data in enumerate(train_loader):\n",
+    "            \n",
+    "    model.train()\n",
+    "    (y, x, x_size) = batch_data\n",
+    "    #print(\"Labels: {}, data: {}, x_size.cpu(): {}\".format(batch_data[0], x.shape,x_size.cpu()))\n",
+    "\n",
+    "    logits = model(x)"
    ]
   }
  ],
