debugged transformer submodules

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "        [-0.7568, -0.6536, -0.7568]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(-0.1854, grad_fn=<SumBackward0>)"
+       "tensor(0.0601, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,28 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.6819, 0.9354, 0.6903, 0.0366, 0.6849, 0.6416],\n",
-      "         [0.5199, 0.7700, 0.3092, 0.6851, 0.2818, 0.1478],\n",
-      "         [0.8414, 0.7977, 0.0221, 0.2714, 0.9804, 0.5944],\n",
-      "         [0.2488, 0.8973, 0.8619, 0.7685, 0.4491, 0.0090],\n",
-      "         [0.0423, 0.6825, 0.5328, 0.2912, 0.3406, 0.9102]]])\n",
-      "tensor([[[0.3121, 0.8272, 0.3985, 0.5593, 0.6081, 0.4181],\n",
-      "         [0.8241, 0.3199, 0.9251, 0.5910, 0.0829, 0.9450],\n",
-      "         [0.8792, 0.0930, 0.4043, 0.2949, 0.3686, 0.2105],\n",
-      "         [0.1532, 0.3133, 0.7617, 0.9478, 0.7381, 0.9064],\n",
-      "         [0.5724, 0.9384, 0.8042, 0.1510, 0.0974, 0.8510]]])\n",
-      "Final: tensor([[[-0.1828,  1.5719,  0.0334, -1.0917,  0.4998, -0.0329],\n",
-      "         [ 0.6162,  0.0361,  0.3657,  0.4613, -1.6196,  0.0428],\n",
-      "         [ 1.4760, -0.4186, -1.4787, -1.1593,  0.6277, -0.6146],\n",
-      "         [-1.5344,  0.3117,  1.2544,  1.4660,  0.2582, -0.3624],\n",
-      "         [-1.0488,  1.2484,  0.6002, -1.4427, -1.4521,  1.5687]]],\n",
+      "tensor([[[0.0205, 0.9839, 0.4722, 0.5144, 0.4750, 0.3709],\n",
+      "         [0.6898, 0.0637, 0.7878, 0.8657, 0.6293, 0.9553],\n",
+      "         [0.0415, 0.0994, 0.4251, 0.9324, 0.8413, 0.8969],\n",
+      "         [0.2195, 0.2179, 0.5099, 0.2900, 0.5529, 0.1354],\n",
+      "         [0.6915, 0.2766, 0.6307, 0.5326, 0.1450, 0.8390]]])\n",
+      "tensor([[[0.6223, 0.9084, 0.0278, 0.3628, 0.4586, 0.9681],\n",
+      "         [0.1042, 0.7222, 0.9661, 0.1567, 0.8702, 0.8263],\n",
+      "         [0.0307, 0.7071, 0.1334, 0.7505, 0.0034, 0.6686],\n",
+      "         [0.8367, 0.1280, 0.1493, 0.6331, 0.3516, 0.3006],\n",
+      "         [0.0411, 0.5540, 0.1565, 0.5201, 0.1892, 0.5447]]])\n",
+      "Final: tensor([[[-0.6920,  2.0346, -1.0038, -0.1804, -0.0576,  0.8272],\n",
+      "         [-0.3622, -0.3797,  1.7324,  0.1364,  1.1773,  1.7930],\n",
+      "         [-1.9372, -0.3348, -0.8759,  1.5774, -0.2516,  1.3213],\n",
+      "         [ 0.2100, -1.3400, -0.6562, -0.0804, -0.1209, -1.1433],\n",
+      "         [-0.4961, -0.2822, -0.3770,  0.2024, -1.3655,  0.9246]]],\n",
       "       grad_fn=<NativeLayerNormBackward0>)\n"
      ]
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,19 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 2.6925e+00, -2.0137e-03, -7.4248e-01,  ..., -8.8091e-01,\n",
-       "           1.7555e+00, -4.5437e-01],\n",
-       "         [-7.8534e-01,  1.2909e+00,  1.1241e+00,  ..., -3.0774e-03,\n",
-       "          -8.2417e-01,  1.3832e+00]]], grad_fn=<MulBackward0>)"
+       "tensor([[[-0.2430,  0.0000,  0.1437,  ..., -1.7312, -2.0171,  0.4877],\n",
+       "         [-0.2407, -1.0071,  0.4952,  ..., -0.6492,  0.5152, -0.5740]]],\n",
+       "       grad_fn=<MulBackward0>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,14 +313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MultiHeadAttention(nn.Module): \n",
     "    def __init__(self, d_k, d_model, d_v, dropout, num_heads) -> None:\n",
     "        super(MultiHeadAttention, self).__init__()\n",
-    "        self.d_k, self.d_v, self.d_model = d_k, d_v, d_model\n",
+    "        self.d_k, self.d_v, self.d_model, self.num_heads = d_k, d_v, d_model, num_heads\n",
     "        self.query_layer, self.key_layer, self.value_layer = nn.Linear(d_model, num_heads* d_k), nn.Linear(d_model, num_heads* d_k), nn.Linear(d_model, num_heads*d_v)\n",
     "        self.layer_norm = nn.LayerNorm(d_model)\n",
     "        self.concat_projection = nn.Linear(num_heads*d_v, d_model)\n",
@@ -330,9 +329,9 @@
     "    def forward(self, q, k, v):\n",
     "        k_len, q_len, v_len, batch_size = k.size(1), q.size(1), v.size(1),  q.size(0)\n",
     "        residual = q\n",
-    "        k, q, v = self.key_layer(k).view(batch_size, k_len,  num_heads, d_k), self.query_layer(q).view(batch_size, q_len,  num_heads, d_k), self.value_layer(v).view(batch_size, v_len,  num_heads, d_v)\n",
+    "        k, q, v = self.key_layer(k).view(batch_size, k_len,  self.num_heads, self.d_k), self.query_layer(q).view(batch_size, q_len,  self.num_heads, self.d_k), self.value_layer(v).view(batch_size, v_len,  self.num_heads, self.d_v)\n",
     "        q, k, v = q.transpose(1, 2), k.transpose(1, 2), v.transpose(1, 2)\n",
-    "        attention = scaled_dot_product_attention(q, k, d_k)\n",
+    "        attention = scaled_dot_product_attention(q, k, self.d_k)\n",
     "        output = torch.matmul(attention, v)\n",
     "        output = self.concat_projection(output.transpose(1, 2).contiguous().view(batch_size, q_len, -1))\n",
     "        return self.dropout(self.layer_norm(output+residual))"
@@ -340,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "class EncoderLayer(nn.Module): \n",
     "    def __init__(self, d_k, d_model, d_v, num_heads, d_ff, dropout) -> None:\n",
     "        super(EncoderLayer, self).__init__()\n",
-    "        self.k_layer, self.q_layer, self.v_layer = nn.Linear(d_k, d_model), nn.Linear(d_k, d_model), nn.Linear(d_v, d_model)\n",
+    "        self.k_layer, self.q_layer, self.v_layer = nn.Linear(d_model, d_model), nn.Linear(d_model, d_model), nn.Linear(d_model, d_model)\n",
     "        self.multihead_attention = MultiHeadAttention(d_k, d_model, d_v, dropout, num_heads)\n",
     "        self.pointwise_ffn = PositionWiseFFN(d_model, d_ff, dropout)\n",
     "    \n",
@@ -366,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +380,7 @@
     "    \n",
     "    def forward(self, x):\n",
     "        embedded = self.embedding(x)\n",
-    "        x = self.dropout(embedded + self.positional_embedding(x, d_model))\n",
+    "        x = self.dropout(embedded + self.positional_embedding(x, self.d_model))\n",
     "        for layer in self.layers:\n",
     "            x = layer(x)\n",
     "        return x"
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,28 +497,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument index in method wrapper_CUDA__index_select)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[56], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m (y, x, x_size) \u001b[39m=\u001b[39m batch_data\n\u001b[1;32m      5\u001b[0m \u001b[39m#print(\"Labels: {}, data: {}, x_size.cpu(): {}\".format(batch_data[0], x.shape,x_size.cpu()))\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m logits \u001b[39m=\u001b[39m model(x)\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1516\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1518\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_impl(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1522\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1523\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1524\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1525\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1526\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1527\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1529\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1530\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[50], line 11\u001b[0m, in \u001b[0;36mEncoder.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[0;32m---> 11\u001b[0m     embedded \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49membedding(x)\n\u001b[1;32m     12\u001b[0m     x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropout(embedded \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpositional_embedding(x, d_model))\n\u001b[1;32m     13\u001b[0m     \u001b[39mfor\u001b[39;00m layer \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers:\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1516\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1518\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_impl(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1522\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1523\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1524\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1525\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1526\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1527\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1529\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1530\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/sparse.py:162\u001b[0m, in \u001b[0;36mEmbedding.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 162\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49membedding(\n\u001b[1;32m    163\u001b[0m         \u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpadding_idx, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmax_norm,\n\u001b[1;32m    164\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnorm_type, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mscale_grad_by_freq, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msparse)\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/functional.py:2233\u001b[0m, in \u001b[0;36membedding\u001b[0;34m(input, weight, padding_idx, max_norm, norm_type, scale_grad_by_freq, sparse)\u001b[0m\n\u001b[1;32m   2227\u001b[0m     \u001b[39m# Note [embedding_renorm set_grad_enabled]\u001b[39;00m\n\u001b[1;32m   2228\u001b[0m     \u001b[39m# XXX: equivalent to\u001b[39;00m\n\u001b[1;32m   2229\u001b[0m     \u001b[39m# with torch.no_grad():\u001b[39;00m\n\u001b[1;32m   2230\u001b[0m     \u001b[39m#   torch.embedding_renorm_\u001b[39;00m\n\u001b[1;32m   2231\u001b[0m     \u001b[39m# remove once script supports set_grad_enabled\u001b[39;00m\n\u001b[1;32m   2232\u001b[0m     _no_grad_embedding_renorm_(weight, \u001b[39minput\u001b[39m, max_norm, norm_type)\n\u001b[0;32m-> 2233\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49membedding(weight, \u001b[39minput\u001b[39;49m, padding_idx, scale_grad_by_freq, sparse)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument index in method wrapper_CUDA__index_select)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, batch_data in enumerate(train_loader):\n",
     "            \n",
