--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "        [-0.7568, -0.6536, -0.7568]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.0601, grad_fn=<SumBackward0>)"
+       "tensor(0.2575, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,28 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.0205, 0.9839, 0.4722, 0.5144, 0.4750, 0.3709],\n",
-      "         [0.6898, 0.0637, 0.7878, 0.8657, 0.6293, 0.9553],\n",
-      "         [0.0415, 0.0994, 0.4251, 0.9324, 0.8413, 0.8969],\n",
-      "         [0.2195, 0.2179, 0.5099, 0.2900, 0.5529, 0.1354],\n",
-      "         [0.6915, 0.2766, 0.6307, 0.5326, 0.1450, 0.8390]]])\n",
-      "tensor([[[0.6223, 0.9084, 0.0278, 0.3628, 0.4586, 0.9681],\n",
-      "         [0.1042, 0.7222, 0.9661, 0.1567, 0.8702, 0.8263],\n",
-      "         [0.0307, 0.7071, 0.1334, 0.7505, 0.0034, 0.6686],\n",
-      "         [0.8367, 0.1280, 0.1493, 0.6331, 0.3516, 0.3006],\n",
-      "         [0.0411, 0.5540, 0.1565, 0.5201, 0.1892, 0.5447]]])\n",
-      "Final: tensor([[[-0.6920,  2.0346, -1.0038, -0.1804, -0.0576,  0.8272],\n",
-      "         [-0.3622, -0.3797,  1.7324,  0.1364,  1.1773,  1.7930],\n",
-      "         [-1.9372, -0.3348, -0.8759,  1.5774, -0.2516,  1.3213],\n",
-      "         [ 0.2100, -1.3400, -0.6562, -0.0804, -0.1209, -1.1433],\n",
-      "         [-0.4961, -0.2822, -0.3770,  0.2024, -1.3655,  0.9246]]],\n",
+      "tensor([[[0.9640, 0.0679, 0.4721, 0.4058, 0.9082, 0.1566],\n",
+      "         [0.2718, 0.7320, 0.3087, 0.9869, 0.7386, 0.2504],\n",
+      "         [0.2067, 0.8596, 0.3604, 0.5917, 0.9052, 0.2671],\n",
+      "         [0.2320, 0.5409, 0.4842, 0.7344, 0.3669, 0.3251],\n",
+      "         [0.3659, 0.6104, 0.7463, 0.6258, 0.8464, 0.4208]]])\n",
+      "tensor([[[0.1044, 0.9810, 0.1812, 0.2224, 0.5235, 0.9089],\n",
+      "         [0.1113, 0.1343, 0.7105, 0.2314, 0.4582, 0.8440],\n",
+      "         [0.3705, 0.7338, 0.2035, 0.9652, 0.6099, 0.0625],\n",
+      "         [0.2744, 0.4312, 0.6716, 0.8684, 0.7218, 0.4660],\n",
+      "         [0.8408, 0.8313, 0.7595, 0.1585, 0.9905, 0.7306]]])\n",
+      "Final: tensor([[[ 0.0169, -0.0332, -1.0513, -1.1157,  0.9520,  0.0094],\n",
+      "         [-1.7468, -0.5032, -0.1096,  0.4028,  0.3474,  0.0838],\n",
+      "         [-1.2471,  1.3682, -1.2813,  1.2743,  1.1667, -1.8845],\n",
+      "         [-1.4294, -0.2309,  0.2421,  1.3924,  0.0693, -0.6967],\n",
+      "         [ 0.3728,  0.9777,  1.1428, -0.7143,  1.9950,  0.2307]]],\n",
       "       grad_fn=<NativeLayerNormBackward0>)\n"
      ]
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,18 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.2430,  0.0000,  0.1437,  ..., -1.7312, -2.0171,  0.4877],\n",
-       "         [-0.2407, -1.0071,  0.4952,  ..., -0.6492,  0.5152, -0.5740]]],\n",
+       "tensor([[[-0.0231, -1.3699,  1.3832,  ...,  1.5887,  0.7849,  0.8613],\n",
+       "         [ 0.6364, -1.7931,  1.7339,  ..., -0.8785,  0.9848,  0.2386]]],\n",
        "       grad_fn=<MulBackward0>)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClassificationTransformer(nn.Module): \n",
+    "    def __init__(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout=0.1) -> None:\n",
+    "        super(ClassificationTransformer, self).__init_()\n",
+    "        self.encoder_only_transformer = Encoder(d_k, d_model, d_v, d_ff, num_heads, num_layers, vocab_size, dropout=0.1)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.fc1 = nn.Linear(d_model, d_model)\n",
+    "        self.fc2 = nn.Linear(d_model, num_classes)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        out = self.encoder_only_transformer(x)\n",
+    "        avg_pool = torch.mean(out, dim=-2)\n",
+    "        return self.fc2(self.dropout(self.fc1(self.dropout(avg_pool))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,19 +507,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'super' object has no attribute '_ClassificationTransformer__init_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[183], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[39m=\u001b[39m ClassificationTransformer(D_K, D_MODEL, D_V, D_FF, num_heads\u001b[39m=\u001b[39;49m\u001b[39m4\u001b[39;49m, num_classes\u001b[39m=\u001b[39;49mOUTPUT_DIM, num_layers\u001b[39m=\u001b[39;49m\u001b[39m4\u001b[39;49m, vocab_size\u001b[39m=\u001b[39;49mVOCAB_SIZE)\n\u001b[1;32m      2\u001b[0m model \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mto(DEVICE)\n",
+      "Cell \u001b[0;32mIn[178], line 3\u001b[0m, in \u001b[0;36mClassificationTransformer.__init__\u001b[0;34m(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m----> 3\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m__init_()\n\u001b[1;32m      4\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mencoder_only_transformer \u001b[39m=\u001b[39m Encoder(d_k, d_model, d_v, d_ff, num_heads, num_layers, vocab_size, dropout\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m)\n\u001b[1;32m      5\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropout \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mDropout(dropout)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'super' object has no attribute '_ClassificationTransformer__init_'"
+     ]
+    }
+   ],
    "source": [
-    "model = Encoder(D_K, D_MODEL, D_V, D_FF, num_heads=4, num_layers=4, vocab_size=VOCAB_SIZE)\n",
+    "model = ClassificationTransformer(D_K, D_MODEL, D_V, D_FF, num_heads=4, num_classes=OUTPUT_DIM, num_layers=4, vocab_size=VOCAB_SIZE)\n",
     "model = model.to(DEVICE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 58, 256])\n",
+      "torch.Size([8, 58, 4])\n"
+     ]
+    }
+   ],
    "source": [
     "for i, batch_data in enumerate(train_loader):\n",
     "            \n",
@@ -507,7 +549,18 @@
     "    (y, x, x_size) = batch_data\n",
     "    #print(\"Labels: {}, data: {}, x_size.cpu(): {}\".format(batch_data[0], x.shape,x_size.cpu()))\n",
     "\n",
-    "    logits = model(x)"
+    "    out  = model(x)\n",
+    "    print(out.shape)\n",
+    "    tmp_linear_layer = nn.Linear(256, 4)\n",
+    "    print(tmp_linear_layer(out).shape)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The whole train set took 3 min and 54 seconds to be iterated through (without any loss optimization) which seems computationally efficient"
    ]
   }
  ],
