--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "        [-0.7568, -0.6536, -0.7568]])"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.2575, grad_fn=<SumBackward0>)"
+       "tensor(0.0265, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,28 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.9640, 0.0679, 0.4721, 0.4058, 0.9082, 0.1566],\n",
-      "         [0.2718, 0.7320, 0.3087, 0.9869, 0.7386, 0.2504],\n",
-      "         [0.2067, 0.8596, 0.3604, 0.5917, 0.9052, 0.2671],\n",
-      "         [0.2320, 0.5409, 0.4842, 0.7344, 0.3669, 0.3251],\n",
-      "         [0.3659, 0.6104, 0.7463, 0.6258, 0.8464, 0.4208]]])\n",
-      "tensor([[[0.1044, 0.9810, 0.1812, 0.2224, 0.5235, 0.9089],\n",
-      "         [0.1113, 0.1343, 0.7105, 0.2314, 0.4582, 0.8440],\n",
-      "         [0.3705, 0.7338, 0.2035, 0.9652, 0.6099, 0.0625],\n",
-      "         [0.2744, 0.4312, 0.6716, 0.8684, 0.7218, 0.4660],\n",
-      "         [0.8408, 0.8313, 0.7595, 0.1585, 0.9905, 0.7306]]])\n",
-      "Final: tensor([[[ 0.0169, -0.0332, -1.0513, -1.1157,  0.9520,  0.0094],\n",
-      "         [-1.7468, -0.5032, -0.1096,  0.4028,  0.3474,  0.0838],\n",
-      "         [-1.2471,  1.3682, -1.2813,  1.2743,  1.1667, -1.8845],\n",
-      "         [-1.4294, -0.2309,  0.2421,  1.3924,  0.0693, -0.6967],\n",
-      "         [ 0.3728,  0.9777,  1.1428, -0.7143,  1.9950,  0.2307]]],\n",
+      "tensor([[[0.4634, 0.9897, 0.1787, 0.4349, 0.0167, 0.3649],\n",
+      "         [0.7099, 0.9547, 0.5703, 0.1806, 0.7663, 0.9474],\n",
+      "         [0.9830, 0.1877, 0.9027, 0.6246, 0.6299, 0.3868],\n",
+      "         [0.4183, 0.5125, 0.4309, 0.8094, 0.9803, 0.2339],\n",
+      "         [0.2485, 0.3744, 0.1150, 0.9519, 0.3056, 0.3546]]])\n",
+      "tensor([[[0.1507, 0.4008, 0.1402, 0.3307, 0.0758, 0.8889],\n",
+      "         [0.7818, 0.3829, 0.2486, 0.6583, 0.1921, 0.1057],\n",
+      "         [0.9768, 0.6531, 0.8914, 0.6375, 0.9425, 0.7716],\n",
+      "         [0.7123, 0.6627, 0.8847, 0.4672, 0.9280, 0.2724],\n",
+      "         [0.4409, 0.0255, 0.6359, 0.0811, 0.6480, 0.3709]]])\n",
+      "Final: tensor([[[-0.9702,  0.7729, -1.6328, -0.6300, -2.1410,  0.4659],\n",
+      "         [ 1.0003,  0.6541, -0.5104, -0.4656, -0.1972,  0.0153],\n",
+      "         [ 2.0511, -0.4612,  1.6791,  0.4848,  1.1814,  0.2518],\n",
+      "         [ 0.1893,  0.2897,  0.6048,  0.5174,  1.9355, -1.2120],\n",
+      "         [-0.8012, -1.4512, -0.6631, -0.0298, -0.2078, -0.7200]]],\n",
       "       grad_fn=<NativeLayerNormBackward0>)\n"
      ]
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,18 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.0231, -1.3699,  1.3832,  ...,  1.5887,  0.7849,  0.8613],\n",
-       "         [ 0.6364, -1.7931,  1.7339,  ..., -0.8785,  0.9848,  0.2386]]],\n",
+       "tensor([[[ 1.3963,  0.6586, -1.9347,  ..., -1.3045,  1.2025, -0.5884],\n",
+       "         [-0.3633, -0.3044,  0.0583,  ...,  0.6497, -0.8477,  0.9421]]],\n",
        "       grad_fn=<MulBackward0>)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,13 +395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ClassificationTransformer(nn.Module): \n",
     "    def __init__(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout=0.1) -> None:\n",
-    "        super(ClassificationTransformer, self).__init_()\n",
+    "        super(ClassificationTransformer, self).__init__()\n",
     "        self.encoder_only_transformer = Encoder(d_k, d_model, d_v, d_ff, num_heads, num_layers, vocab_size, dropout=0.1)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        self.fc1 = nn.Linear(d_model, d_model)\n",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,22 +507,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 218,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'super' object has no attribute '_ClassificationTransformer__init_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[183], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[39m=\u001b[39m ClassificationTransformer(D_K, D_MODEL, D_V, D_FF, num_heads\u001b[39m=\u001b[39;49m\u001b[39m4\u001b[39;49m, num_classes\u001b[39m=\u001b[39;49mOUTPUT_DIM, num_layers\u001b[39m=\u001b[39;49m\u001b[39m4\u001b[39;49m, vocab_size\u001b[39m=\u001b[39;49mVOCAB_SIZE)\n\u001b[1;32m      2\u001b[0m model \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mto(DEVICE)\n",
-      "Cell \u001b[0;32mIn[178], line 3\u001b[0m, in \u001b[0;36mClassificationTransformer.__init__\u001b[0;34m(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m----> 3\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m__init_()\n\u001b[1;32m      4\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mencoder_only_transformer \u001b[39m=\u001b[39m Encoder(d_k, d_model, d_v, d_ff, num_heads, num_layers, vocab_size, dropout\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m)\n\u001b[1;32m      5\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropout \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mDropout(dropout)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'super' object has no attribute '_ClassificationTransformer__init_'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = ClassificationTransformer(D_K, D_MODEL, D_V, D_FF, num_heads=4, num_classes=OUTPUT_DIM, num_layers=4, vocab_size=VOCAB_SIZE)\n",
     "model = model.to(DEVICE)"
@@ -530,37 +517,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, train_loader, val_loader, loss_function, optim, epochs, device):\n",
+    "    losses = [] #group losses for loss visualization \n",
+    "    running_loss = 0.0\n",
+    "    for epoch in range(epochs):\n",
+    "        model.train()\n",
+    "        print(\"Epoch %d / %d\" % (epoch+1, epochs))\n",
+    "        print(\"-\"*10)\n",
+    "    \n",
+    "        for i, batch_data in enumerate(train_loader):\n",
+    "            (y, x, x_size) = batch_data\n",
+    "            logits = model(x)\n",
+    "            loss = loss_function(logits, y)\n",
+    "            optim.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optim.step()\n",
+    "            \n",
+    "            running_loss += loss.item()\n",
+    "            losses.append(loss)\n",
+    "\n",
+    "            if (i+1) % 1000 == 0:\n",
+    "                print(\"Step: {}, average training loss over last 2000 steps: {:.4f}\".format(i+1, running_loss/1000))\n",
+    "                running_loss = 0.0\n",
+    "            \n",
+    "            model.eval()\n",
+    "            val_loss = 0.0\n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            for i, batch_data in enumerate(val_loader):\n",
+    "                (y, x, x_size) = batch_data\n",
+    "                y, x, x_size = y.to(device), x.to(device), x_size.to(device)\n",
+    "                \n",
+    "                logits = model(x, x_size.cpu())\n",
+    "                loss = loss_function(logits, y)\n",
+    "                \n",
+    "                val_loss += loss.item()\n",
+    "        \n",
+    "        print(\"Epoch: {}, validation loss: {:.4f}\".format(epoch+1, val_loss/len(val_loader)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=LEARNING_RATE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([8, 58, 256])\n",
-      "torch.Size([8, 58, 4])\n"
+      "Epoch 1 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 1.1639\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.7549\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.6142\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.5555\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.4905\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.4827\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.4359\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.4413\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.4520\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.4281\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.4076\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.4091\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "forward() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[227], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train(model, train_loader, val_loader, torch\u001b[39m.\u001b[39;49mnn\u001b[39m.\u001b[39;49mfunctional\u001b[39m.\u001b[39;49mcross_entropy, optimizer, NUM_EPOCHS, DEVICE)\n",
+      "Cell \u001b[0;32mIn[225], line 34\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, val_loader, loss_function, optim, epochs, device)\u001b[0m\n\u001b[1;32m     31\u001b[0m (y, x, x_size) \u001b[39m=\u001b[39m batch_data\n\u001b[1;32m     32\u001b[0m y, x, x_size \u001b[39m=\u001b[39m y\u001b[39m.\u001b[39mto(device), x\u001b[39m.\u001b[39mto(device), x_size\u001b[39m.\u001b[39mto(device)\n\u001b[0;32m---> 34\u001b[0m logits \u001b[39m=\u001b[39m model(x, x_size\u001b[39m.\u001b[39;49mcpu())\n\u001b[1;32m     35\u001b[0m loss \u001b[39m=\u001b[39m loss_function(logits, y)\n\u001b[1;32m     37\u001b[0m val_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39mitem()\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1516\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1518\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_impl(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1522\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1523\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1524\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1525\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1526\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1527\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1529\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1530\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: forward() takes 2 positional arguments but 3 were given"
      ]
     }
    ],
    "source": [
-    "for i, batch_data in enumerate(train_loader):\n",
-    "            \n",
-    "    model.train()\n",
-    "    (y, x, x_size) = batch_data\n",
-    "    #print(\"Labels: {}, data: {}, x_size.cpu(): {}\".format(batch_data[0], x.shape,x_size.cpu()))\n",
-    "\n",
-    "    out  = model(x)\n",
-    "    print(out.shape)\n",
-    "    tmp_linear_layer = nn.Linear(256, 4)\n",
-    "    print(tmp_linear_layer(out).shape)\n",
-    "    break"
+    "train(model, train_loader, val_loader, torch.nn.functional.cross_entropy, optimizer, NUM_EPOCHS, DEVICE)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The whole train set took 3 min and 54 seconds to be iterated through (without any loss optimization) which seems computationally efficient"
+    "What do I want to see from this training? \n",
+    "\n",
+    "- I want to see how long it took for this to converge \n",
+    "- I want to see the computational complexity (how long per epoch?)\n",
+    "- How does the model accuracy respond to changes in hyperparams? Not just LR and the usuals, but also d_model, d_k, d_v, d_ff"
    ]
   }
  ],
