modified:   notebooks/transformer_scratchpad.ipynb

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -606,7 +606,18 @@
       "Step: 3000, average training loss over last 2000 steps: 0.3784\n",
       "Step: 4000, average training loss over last 2000 steps: 0.3798\n",
       "Step: 5000, average training loss over last 2000 steps: 0.3922\n",
-      "Step: 6000, average training loss over last 2000 steps: 0.3831\n"
+      "Step: 6000, average training loss over last 2000 steps: 0.3831\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.3655\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.3765\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.3669\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.3527\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.3543\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.3568\n",
+      "Epoch: 2, validation loss: 0.3366, val accuracy: 88.97\n",
+      "Epoch 3 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.3389\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.3218\n"
      ]
     }
    ],
@@ -623,6 +634,15 @@
     "- I want to see how long it took for this to converge \n",
     "- I want to see the computational complexity (how long per epoch?)\n",
     "- How does the model accuracy respond to changes in hyperparams? Not just LR and the usuals, but also d_model, d_k, d_v, d_ff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thoughts so far: \n",
+    "\n",
+    "This architecture is way more compute intensive but at the same time so much more batch efficient than previously explored ones (LSTMs, RNNs even when bidirectional + multi layered and so on) that we see near 90% validation accuracy after just one or two epochs. These epochs, however, take tremendously long (7 minutes per epoch v/s the 1 minute LSTMs were taking). Part of this could be becauase of the implementation being from scratch (torch.transformer might be faster), but most of this comes from the computational load the multiple blocks (and their individual complexities)"
    ]
   }
  ],
